# VDSCP-Group-5

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
doc/: Doxyfile
doc/doxygen/html/: HashCode_8cpp.html  HashCode_8h.html  HashCode_8h_source.html  ManagerInterface_8cpp.html  ManagerInterface_8h.html  ManagerInterface_8h_source.html  Manager_8cpp.html  Manager_8h.html  Manager_8h_source.html  annotated.html  classClassProject_1_1Manager-members.html  classClassProject_1_1Manager.html  classClassProject_1_1ManagerInterface-members.html  classClassProject_1_1ManagerInterface.html  classHashCode-members.html  classHashCode.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  index.html  main_8cpp.html  md__home_habi_CLionProjects_VDSCP_Group_5_README.html  menudata.js  namespaceClassProject.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  pages.html
doc/doxygen/latex/: HashCode_8cpp.tex  HashCode_8h.tex  ManagerInterface_8cpp.tex  ManagerInterface_8h.tex  Manager_8cpp.tex  Manager_8h.tex  annotated.tex  classClassProject_1_1Manager.tex  classHashCode.tex  files.tex  refman.tex  (+6 more)
src/: BDD_Id.cpp  BDD_Id.h  CMakeLists.txt  Container.cpp  Container.h  HashCode.cpp  HashCode.h  Manager.cpp  Manager.h  ManagerInterface.h
src/bench/: CMakeLists.txt
src/reachable/: CMakeLists.txt  Reachable.cpp  Reachable.h  Tests.h
src/test/: CMakeLists.txt  ManagerTest.cpp  Tests.cpp  Tests.h
(+45 files in other folders)
